# EnergyDashboardWebDisplay

./: LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  Dockerfile  energy_meter.db  main.py  pyproject.toml
backend/apis/: __init__.py
backend/database/: gas_db_handler.py  user_config_db_handler.py
backend/energy_dashboard/: main.py
backend/energy_dashboard/apis/: __init__.py
backend/energy_dashboard/common/: constants.py
backend/energy_dashboard/database/: database_handler.py
backend/energy_dashboard/models/: connection_request.py  custom_dataset.py  response.py  smart_meter.py  user_configuration.py
backend/energy_dashboard/parser/: external_module_parser.py  meter_parser.py
backend/energy_dashboard/routes/: check_meter.py  meter.py  meter_poll.py  preferences.py
backend/energy_dashboard/validation/: home_wizard_validator.py
backend/energy_dashboard/validation/base/: __init__.py  validator.py
backend/models/: connection_request.py  response.py
backend/routes/: check_meter.py  meter_poll.py
backend/src/: main.py
backend/src/database/: database_handler.py
backend/src/models/: connection_request.py  response.py
backend/src/routes/: check_meter.py  meter_poll.py
backend/src/validation/: home_wizard_validator.py
backend/src/validation/base/: __init__.py  validator.py
backend/tests/: test_validators.py
backend/validation/: __init__.py  home_wizard_validator.py  meter_validation.py
backend/validation/schemes/: homewizard.py
frontend/: Dockerfile  README.md  next.config.mjs  nginx.conf  (+4 more)
(+21 files in other folders)
