[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Zahyr Seferina <zahyr.seferina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"
flask = "^3.0.3"
fastapi = "^0.111.0"
requests = "^2.32.3"
pydantic = "^2.8.0"
python-homewizard-energy = "^6.0.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120